--- a/public/css/hyde.css
+++ b/public/css/hyde.css
@@ -58,7 +58,7 @@ html {
   padding: 2rem 1rem;
   color: rgba(255,255,255,.5);
   /*background-color: #ECAF2F*/
-  background-color: #DF7822;
+  background-color: #ff6633;
 }
 @media (min-width: 48em) {
   .sidebar {
